--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,8 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -482,7 +483,7 @@ input, select, textarea {
 			-ms-user-select: none;
 			user-select: none;
 			color: #ffffff;
-			cursor: pointer;
+			cursor:url(cursor/pointer.cur),auto;
 			display: inline-block;
 			font-size: 0.8rem;
 			font-weight: 300;
@@ -1012,7 +1013,7 @@ input, select, textarea {
 		border: 0;
 		box-shadow: inset 0 0 0 1px #ffffff;
 		color: #ffffff !important;
-		cursor: pointer;
+		cursor:url(cursor/pointer.cur),auto;
 		display: inline-block;
 		font-size: 0.8rem;
 		font-weight: 300;
@@ -1562,7 +1563,7 @@ input, select, textarea {
 				right: 0;
 				width: 4rem;
 				height: 4rem;
-				cursor: pointer;
+				cursor:url(cursor/pointer.cur),auto;
 				text-indent: 4rem;
 				overflow: hidden;
 				white-space: nowrap;
