--- a/assets/css/cursor.css
+++ b/assets/css/cursor.css
@@ -1,9 +1,1 @@
-*{
-	cursor:url(cursor/normal.cur),auto;
-}
-a{
-	cursor:url(cursor/pointer.cur),auto;
-}
-/*::selection{
-	cursor:url(cursor/select.cur)
-}*/
+*{cursor:url(cursor/normal.cur),auto;}a{cursor:url(cursor/pointer.cur),auto;}
